@@ -1,4 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST Services_Yadis-0.2.3.tgz 14480 RMD160 08c80a58a377871438f10e2d2b36f771abd08cf4 SHA1 702e00a3a65894ecb45015573d8edf61c4b8837c SHA256 ad2f6f6ab5df5ae06f859a55c8d7f6b005fc919d39dff339770c316d33ae49ca
+DIST Services_Yadis-0.5.1.tgz 15098 RMD160 cbaa2bca9a50139475d077940d7b562fc7425cd0 SHA1 5dc9de02f7b80e02a69d4b01a9631026a0eb8c1e SHA256 cb26fb70a2605788627c5f5d5a31359bd10ae1ca6ad8361f787ddde85184e381
 EBUILD PEAR-Services_Yadis-0.2.3.ebuild 390 RMD160 b4fa980a58d0829f42cac25540cc7284fa701abb SHA1 db8540c0fea6a91259ec9b8fd29e293c00de9f2d SHA256 839078cfd70ee458817070f12b7b1edee625cfa0ea442856d1195aa6aa0383e9
-MISC ChangeLog 250 RMD160 b4436e55453f072ae1738ff5cdb60acd9d63f38c SHA1 df05426496dcea5530f551cb3387b7212473de59 SHA256 1b766be2004ed3942964a70c291c473198f4be448547badaf6db194621ff363c
-MISC metadata.xml 280 RMD160 21ea8e6f8276301a188dc22b33ef1b49fb4fbbd3 SHA1 404ba48de8a50d56a4ccef98308d2f449dde2d43 SHA256 5fb71a5e0ae85ee9a5ca3e757348a8812584ade21772ce1e284585c08ad088af
+EBUILD PEAR-Services_Yadis-0.5.1.ebuild 434 RMD160 2ca9a11ab9d6037d6edad77813ccae026eeb38b2 SHA1 3a7ee054c9121bd19c3d9750af28dcefe4eeeab6 SHA256 ccf9aae95b8082e9996e136387543ba98f48d89eb700ad525b0e22442325bcc7
+MISC ChangeLog 436 RMD160 7b49264e27d088219223a621ad3ebe892802a35e SHA1 79f3c5758ca645fe9b595635f5cfc4ae9a4bf34a SHA256 d5e176b3afe8d2dc5f9d6a4bf4d03d65444017927b9ccb83b16f953437bf7292
+MISC metadata.xml 244 RMD160 763839a53ccf1e2a58d249cfa2d94feeaa69e29c SHA1 fe85b5f10031620b8d1da84d695ec3080df29d82 SHA256 f5bde347c36c74889cbb32d29f06766c08eb3df6e0c468f00295681382c48457
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iQIcBAEBCgAGBQJPI3VzAAoJEHQ6UuhrqBBQpuYQAI7ECUT1+XynHsH51mvf+0Ov
+FfODSEr5r6/KF58MYjcOJtvRZlYBML0/Jbk+tsYGttnqtEEWFgcGAH73Cu0t1l6M
+UYdaQovsArnyGItbmxz8cXLnmXYipRKG3Oc9GAjzcyS6K419WiR+XLIZa7zBrrqU
+YQOIY2aFzy8M+QIpoFeicuKd/BebiRyoJkp4NTdMnKuH+OuMl8ZihjA75z3RvvKR
+d9lomHvnROdjlBAjZ5Rs8QKvKEAWUAUcjdc3pmEFtiU2fYPYd7kqrfDsxzDTVHKj
+agksM0X2PPiPs8pQVi1xcFuFBED3Nhc980Q7d8VmNRMpqYRNaaZ6cFOJmnm5lwIL
+pWI6hOsmy98YnWeLcUypXHFpDP138GySJb07c1GCy0XgNMrVBrm2ndLj0zBy68Z8
+OQjexst+h8i3LjQ0v0N57ZXAcA/RlGaILPYkpaWlGQFyl2uYWMz3yS5cq/BJDGGf
+OQ7CXiTULeaPPtfKGH+zqTN0umKfPIqiECY+307Dkr+nafHO0k31hNziuBW1FJ4b
+iQFYz7xOF242okEaa0TJsJ9Az+mdEll6GhtRVn09QCT38+55nqBKn3kg3FzAP10u
+vBQIPVB2/ct9F2PHaJDyA3SyqZQypcBLEO3mwdPRf7GApNzOzUX0B/Fd2FE//Ky0
+25rPfhPWjG9zjjn4Bxvq
+=YM0V
+-----END PGP SIGNATURE-----
